<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.home.HomeFragment">


    <TextView
        android:id="@+id/tvHomeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:text="@string/home_title"
        android:textColor="@color/text_color"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvHomeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="30dp"
        android:paddingVertical="30dp"
        android:text="@string/home_text"
        android:textAlignment="center"
        android:textColor="@color/text_color"
        android:textSize="25sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHomeTitle"
        tools:visibility="gone" />

    <RelativeLayout
        android:id="@+id/rlUploadFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/dashed_border"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHomeText"
        tools:visibility="gone">

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="400dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@string/click_here_and_select_your_audio"
                android:src="@drawable/update_files"
                app:tint="@color/text_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:gravity="center"
                android:text="@string/home_text_upload"
                android:textColor="@color/text_color"
                android:textSize="25sp"
                android:textStyle="italic" />
        </LinearLayout>
    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvUploaded"
        android:layout_width="350dp"
        android:layout_height="500dp"
        android:gravity="center"
        android:visibility="gone"
        app:cardBackgroundColor="@color/backgroundCard"
        app:cardCornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHomeText"
        tools:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <ImageView
                        android:id="@+id/ivFile"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginVertical="20dp"
                        android:contentDescription="@string/file_image"
                        android:src="@drawable/audio_file"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/file"
                        android:textSize="50sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/ivFile"
                        app:layout_constraintTop_toTopOf="@+id/ivFile" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tvFileNameTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/file_name_home"
                        android:textColor="@color/button_text"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@+id/tvFileName"
                        app:layout_constraintEnd_toStartOf="@+id/tvFileSizeTitle"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvFileName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLength="10"
                        android:text="@string/empty"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/tvFileSize"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvFileNameTitle" />

                    <TextView
                        android:id="@+id/tvFileSizeTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/file_size_home"
                        android:textColor="@color/button_text"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@+id/tvFileSize"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvFileSize"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLength="10"
                        android:text="@string/empty"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvFileNameTitle" />

                    <TextView
                        android:id="@+id/tvFileDurationTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/duration_home"
                        android:textColor="@color/button_text"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@+id/tvFileDuration"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/tvFileSizeTitle"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvFileDuration"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLength="10"
                        android:text="@string/empty"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/tvFileSize"
                        app:layout_constraintTop_toBottomOf="@+id/tvFileDurationTitle" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:gravity="start"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/btnPlay"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:backgroundTint="@color/transparent"
                        android:contentDescription="@string/btn_play"
                        android:scaleType="fitXY"
                        android:src="@drawable/play"
                        app:tint="@color/background" />

                    <ImageButton
                        android:id="@+id/btnPause"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:backgroundTint="@color/transparent"
                        android:contentDescription="@string/btn_pause"
                        android:scaleType="fitXY"
                        android:src="@drawable/pause"
                        android:visibility="gone"
                        app:tint="@color/background" />

                </LinearLayout>

                <SeekBar
                    android:id="@+id/seekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="50dp"
                    android:paddingEnd="50dp"
                    android:progressTint="@color/button_text"
                    android:thumbTint="@color/my_light_primary" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvAudioStart"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:textSize="18sp"
                        tools:text="---" />

                    <TextView
                        android:id="@+id/tvAudioEnd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:textSize="18sp"
                        tools:text="---" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/number_of_speakers"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        android:textStyle="italic" />

                    <Spinner
                        android:id="@+id/spinnerSpeakers"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:padding="15dp"
                        android:textAlignment="center" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center">

                <Button
                    android:id="@+id/btnChangeFile"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:backgroundTint="@color/button_2"
                    android:text="@string/change_file_home"
                    app:rippleColor="@color/white"
                    android:textColor="@color/text_color" />

                <Space
                    android:layout_width="20dp"
                    android:layout_height="0dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnProcess"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:backgroundTint="@color/button_2"
                    android:contentDescription="@string/home_process"
                    android:insetLeft="0dp"
                    android:insetTop="0dp"
                    android:insetRight="0dp"
                    android:insetBottom="0dp"
                    android:padding="7dp"
                    app:cornerRadius="28dp"
                    app:icon="@drawable/ic_navigate_next"
                    app:iconSize="40dp"
                    app:iconTint="@color/white"
                    app:rippleColor="@color/white" />


            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>