<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/transparent">

    <androidx.cardview.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="250dp"
        android:layout_height="300dp"
        app:cardBackgroundColor="@color/background">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvDialogTitle"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/dialog_warning"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/warning_text_color"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/tvDialogBody"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvDialogBody"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                android:text="@string/dialog_body_text"
                android:textAlignment="center"
                android:textColor="@color/text_color"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/btnContinue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDialogTitle" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnContinue"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/button"
                android:text="@string/dialog_continue"
                android:textColor="@color/button_text"
                app:cornerRadius="14dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDialogBody" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>
</LinearLayout>